# MorioKart

./: .gitignore  CMakeLists.txt  ControlFile.txt  ControlFileXL.txt  Enemy.cpp  Enemy.h  GoLight.cpp  GoLight.h  Light.cpp  Light.h  Makefile  Model_Base.cpp  Model_Base.h  MyKart.cpp  MyKart.h  Penguin.cpp  Penguin.h  README.txt  checklist.txt  main.cpp  penguin.blend
include/: Shader_Utils.h
models/: Kart.mtl  riggedPenguin.mtl
models/penguinIdle/: penguinIdle_000014.mtl
models/penguinWalk/: penguinWalk_000008.mtl
shaders/: goLight.f.glsl  goLight.v.glsl  grayscale.f.glsl  jesusShader.f.glsl  jesusShader.v.glsl  modelShader.f.glsl  modelShader.v.glsl  penguinShader.f.glsl  penguinShader.v.glsl  satanShader.f.glsl  satanShader.v.glsl  skyboxShader.f.glsl  skyboxShader.v.glsl
textures/skybox/skybox2/: negy.tga  posy.tga
